--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
 		"vue-html-loader": "^1.2.3",
 		"vue-loader": "^11.1.0",
 		"vue-router": "^2.2.1",
+		"vue-template-compiler": "^2.1.10",
 		"webpack": "^2.2.1"
 	}
 }
