--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /coverage
 
 # production
-/build
+/front-end/build
 
 # misc
 .DS_Store
@@ -15,4 +15,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/front-end/yarn.lock*
 
