--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
 		"vue": "^2.1.10",
 		"vue-html-loader": "^1.2.3",
 		"vue-loader": "^11.1.0",
+		"vue-resource": "^1.2.1",
 		"vue-router": "^2.2.1",
 		"vue-template-compiler": "^2.1.10",
 		"webpack": "^2.2.1"
